// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiProgress has labelProps 1`] = `
Array [
  <div
    class="wuiProgress__data wuiProgress__data--secondary"
  >
    <span
      class="wuiProgress__valueText"
    >
      150
    </span>
  </div>,
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="wuiProgress wuiProgress--native wuiProgress--m wuiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;

exports[`WuiProgress has max 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="wuiProgress wuiProgress--native wuiProgress--m wuiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
  max="100"
/>
`;

exports[`WuiProgress has value 1`] = `
<div
  aria-label="aria-label"
  class="wuiProgress wuiProgress--indeterminate wuiProgress--m wuiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`WuiProgress has valueText and label 1`] = `
Array [
  <div
    class="wuiProgress__data wuiProgress__data--secondary"
  >
    <span
      class="wuiProgress__label"
    >
      Label
    </span>
    <span
      class="wuiProgress__valueText"
    >
      150
    </span>
  </div>,
  <progress
    aria-hidden="true"
    aria-label="aria-label"
    class="wuiProgress wuiProgress--native wuiProgress--m wuiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;

exports[`WuiProgress is determinate 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="wuiProgress wuiProgress--native wuiProgress--m wuiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
  max="100"
  value="50"
/>
`;

exports[`WuiProgress is indeterminate 1`] = `
<div
  aria-label="aria-label"
  class="wuiProgress wuiProgress--indeterminate wuiProgress--m wuiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`WuiProgress is rendered 1`] = `
<div
  aria-label="aria-label"
  class="wuiProgress wuiProgress--indeterminate wuiProgress--m wuiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`WuiProgress valueText is true 1`] = `
Array [
  <div
    class="wuiProgress__data wuiProgress__data--secondary"
  >
    <span
      class="wuiProgress__valueText"
    >
      50%
    </span>
  </div>,
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="wuiProgress wuiProgress--native wuiProgress--m wuiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;
